tests/ui/traits/const-traits/specializing-constness-2.stderr
error: non-const fn in const traits are not supported yet
  --> $DIR/specializing-constness-2.rs:11:5
   |
LL |     fn a() -> u32;
   |     ^ help: mark the function as const: `(const)`

error: non-const fn in const traits are not supported yet
  --> $DIR/specializing-constness-2.rs:21:5
   |
LL |     fn a() -> u32 {
   |     ^ help: mark the function as const: `const`

error[E0277]: the trait bound `T: ~const A` is not satisfied
  --> $DIR/specializing-constness-2.rs:27:6
   |
LL |     <T as A>::a();
   |      ^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
